# gen-readme

./: .gitignore  README.md  pyproject.toml  response_exam.json
src/gen_readme/: __main__.py  app.py  config.py  dir_text_collector.py  git_utils.py  prompting.py  temp_utils.py
src/gen_readme/providers/: __init__.py  base.py
src/gen_readme/providers/gemini/: gemini.py  gemini_client.py  gemini_orchestrator.py  gemini_parser.py
